docs: add kubernetes and helm packaging